<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_baseline_ballot_24"
        android:title="@string/nav_category" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/nav_notification" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/nav_profile" />
</menu>